# openfx-template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_ver1.txt  Info.plist  readme.md
src/: basic.cpp  basic.h  common_ofx.h  const.h  plugin.cpp  plugin.h
